# wslc-manager

./: .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  ws.rs  wslc.rs
static/: index.html
